# rust-esp32-std-demo

./: Cargo.toml
libespcam-sys/: Cargo.toml  README.md  build.rs
src/: main.rs
src/ov2640/: i2s_cam.rs  mod.rs
