[package]
name = "libesp32-camera-sys"
version = "0.1.0"
links = "esp32-camera"
build = "build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"